force-app/main/default/objects/QTB_Tax_Description_Translations__mdt/QTB_Tax_Description_Translations__mdt.object-meta.xml
<CustomObject>
    <label>Tax Description Translations</label>
    <pluralLabel>Tax Description Translations</pluralLabel>
</CustomObject>