force-app/main/default/objects/QTB_Tax_Description_Translations__mdt/fields/QTB_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Country__c</fullName>
    <label>Legal Entity Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>