force-app/main/default/objects/QTB_Tax_Description_Translations__mdt/fields/QTB_Tax_Treatment_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Tax_Treatment_Name__c</fullName>
    <label>Tax Treatment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>