force-app/main/default/objects/QTB_Tax_Description_Translations__mdt/fields/QTB_Withholding_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>QTB_Withholding_Tax_Rate__c</fullName>
    <description>#As part of WithHold for Turkey</description>
    <inlineHelpText>This is applicable only for those countries that has WHT scenarios. Else blank</inlineHelpText>
    <label>Withholding Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>